# peccary

./: .gitignore  .readthedocs.yaml  LICENSE  README.md  README.rst  __init__.py  pyproject.toml  setup.cfg  setup.py
.github/workflows/: pypi_publish.yaml
PESCy/: PESCy_class.py
docs/: conf.py  requirements.txt
docs/source/: about.rst  conf.py  index.rst  installation.rst  intro.rst  start.rst  user-guide.rst
docs/source/HCplots/: index.rst
docs/source/core/: index.rst
docs/source/examples/: index.rst
docs/source/timeseries/: index.rst
docs/source/utils/: index.rst
peccary/: HCplots.py  __init__.py  core.py  examples.py  exceptions.py  pecc.py  peccary.py  routines.py  timeseries.py  utils.py
